<resources>
    <string name="app_name">Sound Vault</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sound Vault</string>
    <string name="nav_header_subtitle">Your Premium Music Player</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_library">Library</string>
    <string name="menu_playlists">Playlists</string>
    <string name="menu_now_playing">Now Playing</string>
    <string name="menu_settings">Settings</string>

    <string name="album_art">Album Art</string>
    <string name="refresh">Refresh Music Library</string>

    <string name="previous">Previous Song</string>
    <string name="play_pause">Play or Pause</string>
    <string name="stop">Stop Playback</string>
    <string name="next">Next Song</string>

    <string name="lorem_ipsum_title">Sound Vault</string>
    <string name="lorem_ipsum">Welcome to the revamped Sound Vault. Experience music with our new stylish themes and 3D effects.</string>
    <string name="fab_content_description">Action button</string>
    <string name="image_view_item_transform_content_description">Item image</string>
    <string name="visualizer_view">Visualizer View</string>
    <string name="shuffle">Shuffle</string>

    <string name="settings_app_theme">App Theme</string>
    <string name="settings_visualizer_style">Visualizer Style</string>
    <string name="settings_allow_tap">Allow visualizer change on tap</string>

    <!-- Equalizer Strings -->
    <string name="eq_preset_label">EQ Preset: </string>
    <string name="eq_hint_start_playing">Please start playing a song to enable equalizer settings.</string>
</resources>