<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_library">

    <fragment
        android:id="@+id/nav_library"
        android:name="com.example.soundvault.ui.library.LibraryFragment"
        android:label="@string/menu_library"
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/nav_playlists"
        android:name="com.example.soundvault.ui.playlists.PlaylistsFragment"
        android:label="@string/menu_playlists"
        tools:layout="@layout/fragment_playlists" />

    <fragment
        android:id="@+id/nav_now_playing"
        android:name="com.example.soundvault.ui.nowplaying.NowPlayingFragment"
        android:label="@string/menu_now_playing"
        tools:layout="@layout/fragment_now_playing" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.soundvault.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>